--- a/app/src/main/res/layout/fragment_user_contact.xml
+++ b/app/src/main/res/layout/fragment_user_contact.xml
@@ -12,49 +12,47 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="60dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="53dp"
-            android:layout_marginTop="50dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
+            android:gravity="center">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonreturn_contact"
                 style="@style/QA_IconReturnBackground"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="18dp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 tools:ignore="MissingConstraints">
 
             </androidx.appcompat.widget.AppCompatButton>
 
             <TextView
                 style="@style/QA_TextColor"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="60dp"
-                android:layout_marginEnd="110dp"
                 android:fontFamily="@font/baloo2extrabold"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="Thông Tin Liên Hệ"
+                android:text="Thông tin liên hệ"
                 android:textAlignment="center"
-                android:textSize="25sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/buttonreturn_contact"
-                tools:ignore="HardcodedText"
-                tools:layout_editor_absoluteY="-3dp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:textSize="14sp"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/infoframe"
             style="@style/QA_CardBackGround"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp">
@@ -80,7 +78,7 @@
                         android:fontFamily="@font/baloo2bold"
                         android:text="MONKEE"
                         android:textColor="@color/QA_purple"
-                        android:textSize="30sp"
+                        android:textSize="16sp"
                         tools:ignore="HardcodedText" />
                 </LinearLayout>
 
@@ -94,8 +92,8 @@
 
                     <ImageView
                         android:id="@+id/imgpin"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="15dp"
                         android:src="@drawable/qa_pin"
@@ -113,7 +111,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/baloo2"
                         android:textAlignment="textStart"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="parent"
                         tools:ignore="HardcodedText" >
@@ -130,8 +128,8 @@
 
                     <ImageView
                         android:id="@+id/imgphone"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginStart="15dp"
                         android:src="@drawable/qa_phone"
@@ -149,7 +147,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/baloo2"
                         android:textAlignment="textStart"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:autoLink="phone"
                         android:linksClickable="true"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -170,8 +168,8 @@
 
                     <ImageView
                         android:id="@+id/imgmail"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:src="@drawable/qa_mail"
                         android:layout_marginStart="15dp"
                         android:layout_gravity="center_vertical"
@@ -189,7 +187,7 @@
                         android:layout_weight="1"
                         android:fontFamily="@font/baloo2"
                         android:textAlignment="textStart"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imgmail"
                         tools:ignore="HardcodedText" >
@@ -200,8 +198,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-15dp">
+            android:layout_height="wrap_content">
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
