--- a/app/src/main/res/layout/fragment_user_change_password.xml
+++ b/app/src/main/res/layout/fragment_user_change_password.xml
@@ -14,219 +14,214 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="53dp"
-            android:layout_marginTop="50dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="30dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
+            android:gravity="center">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buttonreturn_changePass"
                 style="@style/QA_IconReturnBackground"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="18dp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 tools:ignore="MissingConstraints">
 
             </androidx.appcompat.widget.AppCompatButton>
 
             <TextView
                 style="@style/QA_TextColor"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="50dp"
-                android:layout_marginEnd="120dp"
                 android:fontFamily="@font/baloo2extrabold"
                 android:gravity="center_vertical|center_horizontal"
                 android:text="Đổi Mật Khẩu"
                 android:textAlignment="center"
-                android:textSize="25sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/buttonreturn_changePass"
-                app:layout_constraintTop_toTopOf="parent"
+                android:textSize="14sp"
                 tools:ignore="HardcodedText" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/currentpass"
-            style="@style/QA_ChPassBackGround"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="10dp">
-
-            <LinearLayout
+            android:orientation="vertical"
+            android:padding="10dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/currentpass"
+                style="@style/QA_ChPassBackGround"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                tools:ignore="MissingConstraints">
+                android:layout_height="40dp"
+                android:layout_marginTop="40dp"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp">
 
-                <ImageView
-                    android:id="@+id/imglock"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
-                    style="@style/QA_IconPassLock"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/current_text"/>
-
-                <EditText
-                    android:id="@+id/current_text"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="textPassword"
-                    style="@style/QA_TextColor"
-                    android:background="@android:color/transparent"
-                    android:textSize="20sp"
-                    android:textAlignment="textStart"
-                    android:hint="Curent Password"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:enabled="true"
+                    android:orientation="horizontal"
+                    tools:ignore="MissingConstraints">
 
-                    tools:ignore="HardcodedText,RtlCompat" />
-            </LinearLayout>
+                    <ImageView
+                        android:id="@+id/imglock"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center_vertical"
+                        style="@style/QA_IconPassLock"
+                        android:layout_marginEnd="10dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/current_text"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    <EditText
+                        android:id="@+id/current_text"
+                        android:layout_height="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:inputType="textPassword"
+                        style="@style/QA_TextColor"
+                        android:background="@android:color/transparent"
+                        android:textSize="12sp"
+                        android:textAlignment="textStart"
+                        android:hint="Curent Password"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:enabled="true"
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/newpass"
-            style="@style/QA_ChPassBackGround"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="10dp">
+                        tools:ignore="HardcodedText,RtlCompat" />
+                </LinearLayout>
 
-            <LinearLayout
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/newpass"
+                style="@style/QA_ChPassBackGround"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                tools:ignore="MissingConstraints">
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp">
 
-                <ImageView
-                    android:id="@+id/imglock1"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
-                    style="@style/QA_IconPassLock"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/new_text"/>
-
-                <EditText
-                    android:id="@+id/new_text"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_width="280dp"
-                    android:ems="10"
-                    android:inputType="textPassword"
-                    style="@style/QA_TextColor"
-                    android:background="@android:color/transparent"
-                    android:textSize="20sp"
-                    android:textAlignment="textStart"
-                    android:hint="New Password"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:enabled="true"
+                    android:orientation="horizontal"
+                    tools:ignore="MissingConstraints">
 
-                    tools:ignore="HardcodedText,RtlCompat" />
+                    <ImageView
+                        android:id="@+id/imglock1"
+                        style="@style/QA_IconPassLock"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_gravity="center_vertical"
+                        app:layout_constraintEnd_toStartOf="@+id/new_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/eye1"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="10dp"
-                    android:layout_width="38dp"
-                    android:background="@drawable/hide" />
+                    <EditText
+                        android:id="@+id/new_text"
+                        android:layout_height="match_parent"
+                        android:layout_width="270dp"
+                        android:ems="10"
+                        android:inputType="textPassword"
+                        style="@style/QA_TextColor"
+                        android:background="@android:color/transparent"
+                        android:textSize="12sp"
+                        android:textAlignment="textStart"
+                        android:hint="New Password"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:enabled="true"
 
-            </LinearLayout>
+                        tools:ignore="HardcodedText,RtlCompat" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    <ImageView
+                        android:id="@+id/eye1"
+                        android:layout_height="match_parent"
+                        android:layout_width="20dp"
+                        android:background="@drawable/hide" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/retype_new_pass"
-            style="@style/QA_ChPassBackGround"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="10dp">
+                </LinearLayout>
 
-            <LinearLayout
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/retype_new_pass"
+                style="@style/QA_ChPassBackGround"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_margin="10dp"
-                android:orientation="horizontal"
-                tools:ignore="MissingConstraints">
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp">
 
-                <ImageView
-                    android:id="@+id/imglock2"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="15dp"
-                    style="@style/QA_IconPassLock"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/retype_text"/>
-
-                <EditText
-                    android:id="@+id/retype_text"
-                    style="@style/QA_TextColor"
-                    android:layout_width="280dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
-                    android:ems="10"
-                    android:enabled="true"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:hint="Re-type New Password"
-                    android:inputType="textPassword"
-                    android:textAlignment="textStart"
-                    android:textSize="20sp"
+                    android:orientation="horizontal"
+                    tools:ignore="MissingConstraints">
 
-                    tools:ignore="HardcodedText,RtlCompat" />
+                    <ImageView
+                        android:id="@+id/imglock2"
+                        style="@style/QA_IconPassLock"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="10dp"
+                        app:layout_constraintEnd_toStartOf="@+id/retype_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/eye2"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="10dp"
-                    android:layout_width="38dp"
-                    android:background="@drawable/hide" />
+                    <EditText
+                        android:id="@+id/retype_text"
+                        style="@style/QA_TextColor"
+                        android:layout_width="270dp"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:enabled="true"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:hint="Re-type New Password"
+                        android:inputType="textPassword"
+                        android:textAlignment="textStart"
+                        android:textSize="12sp"
 
-            </LinearLayout>
+                        tools:ignore="HardcodedText,RtlCompat" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    <ImageView
+                        android:id="@+id/eye2"
+                        android:layout_height="match_parent"
+                        android:layout_width="20dp"
+                        android:background="@drawable/hide" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button6"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/qa_btn_background"
-            android:fontFamily="@font/baloo2semibold"
-            android:shadowDx="7"
-            android:shadowDy="7"
-            android:text="Lưu thay đổi"
-            android:textSize="20sp"
-            android:layout_gravity="center_horizontal"
-            style="@style/QA_TextColor"
-            tools:ignore="HardcodedText" />
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button6"
+                style="@style/QA_TextColor"
+                android:layout_width="140dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/qa_btn_background"
+                android:fontFamily="@font/baloo2semibold"
+                android:shadowDx="7"
+                android:shadowDy="7"
+                android:text="Lưu thay đổi"
+                android:textSize="14sp"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-15dp">
+            android:layout_marginBottom="60dp"
+            >
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
