--- a/app/src/main/res/layout/qa_text3.xml
+++ b/app/src/main/res/layout/qa_text3.xml
@@ -9,12 +9,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
+        android:orientation="vertical"
+        android:gravity="center">
         <ImageView
             android:id="@+id/image_View1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="280dp"
             android:scaleType="fitCenter"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,8 +27,7 @@
             android:fontFamily="@font/nunitosansextrabold"
             android:text="Hiệu Quả &amp; Đơn Giản"
             android:textAlignment="center"
-            android:textSize="20sp"
-            android:layout_marginTop="40dp"
+            android:textSize="14sp"
             android:layout_gravity="center_horizontal|center_vertical"
             tools:ignore="HardcodedText"
             app:layout_constraintTop_toBottomOf="@+id/image_View1"/>
@@ -36,13 +35,12 @@
         <TextView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:fontFamily="@font/baloo2"
             android:text="Ghi chép thu chi nhanh chóng, theo dõi ngân sách dễ dàng."
             android:textAlignment="center"
             android:textColor="#ABABAB"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:textSize="14sp"
+            android:textSize="12sp"
             tools:ignore="HardcodedText"
             app:layout_constraintTop_toBottomOf="@+id/textTitle"/>
     </LinearLayout>
