--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -59,21 +59,22 @@
                 app:layout_constraintEnd_toEndOf="@+id/ava"
                 app:layout_constraintStart_toStartOf="@+id/ava"
                 app:layout_constraintTop_toBottomOf="@+id/ava">
+
                 <EditText
                     android:id="@+id/name_text"
                     style="@style/QA_TextColor"
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@drawable/qa_edit_text_background"
                     android:enabled="true"
                     android:fontFamily="@font/baloo2bold"
                     android:hint="Tên của bạn"
-                    android:textAlignment="center"
-                    android:textSize="14sp"
-                    android:maxLength="18"
                     android:inputType="text"
-                    android:singleLine="true">
-                </EditText>
+                    android:maxLength="18"
+                    android:singleLine="true"
+                    android:layout_marginHorizontal="10dp"
+                    android:textAlignment="center"
+                    android:textSize="14sp"></EditText>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
