--- a/app/src/main/res/layout/fragment_user_change_password.xml
+++ b/app/src/main/res/layout/fragment_user_change_password.xml
@@ -88,7 +88,7 @@
                         android:background="@android:color/transparent"
                         android:textSize="12sp"
                         android:textAlignment="textStart"
-                        android:hint="Curent Password"
+                        android:hint="Mật khẩu hiện tại"
                         android:gravity="center_vertical|center_horizontal"
                         android:enabled="true"
 
@@ -133,7 +133,7 @@
                         android:background="@android:color/transparent"
                         android:textSize="12sp"
                         android:textAlignment="textStart"
-                        android:hint="New Password"
+                        android:hint="Mật khẩu mới"
                         android:gravity="center_vertical|center_horizontal"
                         android:enabled="true"
 
@@ -141,7 +141,7 @@
 
                     <ImageView
                         android:id="@+id/eye1"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_width="20dp"
                         android:background="@drawable/hide" />
 
@@ -184,7 +184,7 @@
                         android:ems="10"
                         android:enabled="true"
                         android:gravity="center_vertical|center_horizontal"
-                        android:hint="Re-type New Password"
+                        android:hint="Nhập lại mật khẩu mới"
                         android:inputType="textPassword"
                         android:textAlignment="textStart"
                         android:textSize="12sp"
@@ -193,7 +193,7 @@
 
                     <ImageView
                         android:id="@+id/eye2"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_width="20dp"
                         android:background="@drawable/hide" />
 
