--- a/app/src/main/res/layout/dat_activity_pie_chart.xml
+++ b/app/src/main/res/layout/dat_activity_pie_chart.xml
@@ -8,14 +8,28 @@
     tools:context=".Dat_PieChartActivity"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView11"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="BÁO CÁO"
-        android:textSize="30dp"
-        android:textAlignment="center"
-        android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp">
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="37dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/dat_icon3" />
+
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="BÁO CÁO"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginLeft="120dp"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
