--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="dat_pink">#CBA9F4</color>
     <color name="dat_xam_nhat">#CCCCCC</color>
     <color name="dat_green">#679C47</color>
+    <color name="dat_light_pink">#E7D3FF</color>
 </resources>
