--- a/app/src/main/res/layout/dat_add_expense_activity.xml
+++ b/app/src/main/res/layout/dat_add_expense_activity.xml
@@ -166,8 +166,8 @@
 
     <GridView
         android:id="@+id/gv_expense"
-        android:layout_width="359dp"
-        android:layout_height="320dp"
+        android:layout_width="wrap_content"
+        android:layout_height="350dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
@@ -182,7 +182,8 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="30dp"
         android:layout_marginRight="40dp"
-        android:backgroundTint="@color/dat_pink"
+        android:background="@drawable/dat_background_iconadd"
+        app:backgroundTint="@null"
         android:text="THÊM"
         android:textSize="20dp"
         android:textStyle="bold" />
