--- a/app/src/main/res/layout/activity_dung_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dung_dang_ky.xml
@@ -156,7 +156,7 @@
                 ></ImageView>
         </RelativeLayout>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/dangky"
             android:layout_width="match_parent"
             android:layout_height="125px"
@@ -166,7 +166,7 @@
             android:background="@drawable/dung_shape_button_danhnhap"
             android:text="Đăng Ký"
             android:textColor="@color/black"
-            android:textSize="30px"></Button>
+            android:textSize="30px"></androidx.appcompat.widget.AppCompatButton>
 
     </LinearLayout>
 
