--- a/app/src/main/res/layout/dung_dialog_dangky_thanhcong.xml
+++ b/app/src/main/res/layout/dung_dialog_dangky_thanhcong.xml
@@ -26,7 +26,7 @@
         android:textAlignment="center"
         android:textSize="35px"
         android:textStyle="bold"/>
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:layout_marginTop="500px"
         android:id="@+id/tieptuc"
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
         android:background="@drawable/dung_shape_button_danhnhap"
         android:text="Quay lại đăng nhập"
         android:textColor="@color/black"
-        android:textSize="30px"></Button>
+        android:textSize="30px"></androidx.appcompat.widget.AppCompatButton>
 
 
 
