--- a/app/src/main/res/layout/dung_quenmatkhau_successfull.xml
+++ b/app/src/main/res/layout/dung_quenmatkhau_successfull.xml
@@ -54,13 +54,13 @@
 
             ></ImageView>
     </RelativeLayout>
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/tieptuc"
         android:layout_width="match_parent"
         android:layout_height="125px"
         android:background="@drawable/dung_shape_button_danhnhap"
         android:text="Tiếp tục"
         android:textColor="@color/black"
-        android:textSize="30px"></Button>
+        android:textSize="30px"></androidx.appcompat.widget.AppCompatButton>
 
 </LinearLayout>
