--- a/app/src/main/res/layout/dat_activity_pie_chart.xml
+++ b/app/src/main/res/layout/dat_activity_pie_chart.xml
@@ -91,7 +91,7 @@
             <TextView
                 android:id="@+id/txtincome"
                 android:layout_width="wrap_content"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="2000000"
                 android:textColor="@color/dat_pink"
